[project]
name = "ComfyUI-RealEsrgan_Upscaler"
description = "ComfyUI-RealEsrgan_Upscaler."
version = "0.0.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/zentrocdot/ComfyUI_RealEsrgan_Upscaler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zentrocdot"
DisplayName = "ComfyUI_realESRGAN_Upscaler"
Icon = "https://github.com/zentrocdot/ComfyUI_RealEsrgan_Upscaler/blob/main/images/original_logo_512x512.png"
