[project]
name = "ComfyUI-RealESRGAN_Upscaler"
description = "ComfyUI-RealESRGAN_Upscaler."
version = "0.0.3.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/iGavroche/Ninode-RealESRGAN_Upscaler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "iGavroche"
DisplayName = "RealESRGAN Upscaler"
Icon = "https://github.com/iGavroche/Ninode-RealESRGAN_Upscaler/blob/main/images/original_logo_512x512.png"
